--- a/miniprogram/pages/Longlong/Longlong.wxml
+++ b/miniprogram/pages/Longlong/Longlong.wxml
@@ -17,7 +17,7 @@
 关于该小程序
 </view>
 <view class="row">
-该小程序是我开发的的第一个小程序，很简陋，技术含量是一点没有（可能还有很多bug，请您多多见谅）
+该小程序是我开发的的第一个小程序，可能有很多bug，请您多多见谅
 </view>
 <view class="item">
 声明
